--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -1,1 +1,10 @@
-$bgColor: red;
+$red: #ea232c;
+
+$dark-red: #bb2f2a;
+$grey: #f5f5f5;
+$black: #444444;
+$dark-grey: #e7e7e7;
+
+$main-color:#98acf8;
+$main-color2:#bedcfa;
+$purple:#b088f9;
