--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,23 +1,24 @@
 header.header
-    .header__column
-        a(href=routes.home)
-            i.fas.fa-compact-disc
+    .header__wrapper
+        .header__column
+            a(href=routes.home)
+                i.fas.fa-compact-disc
 
-    .header__column
-        form(action=routes.search, method="get")
-            input(type="text", placeholder="Search the video", name="term")
+        .header__column
+            form(action=routes.search, method="get")
+                input(type="text", placeholder="Search", name="term")
 
-    .header__column
-        ul
-            if !user.isAuthenticated
-                li
-                    a(href=routes.join) Join
-                li
-                    a(href=routes.login) Log In
-            else 
-                li
-                    a(href=`/videos${routes.upload}`) Upload
-                li
-                    a(href=routes.userDetail(user.id)) Profile
-                li
-                    a(href=routes.logout) Log Out
+        .header__column
+            ul
+                if !user
+                    li
+                        a(href=routes.join) Join
+                    li
+                        a(href=routes.login) Log In
+                else 
+                    li
+                        a(href=`/videos${routes.upload}`) Upload
+                    li
+                        a(href=routes.userDetail(user.id)) Profile
+                    li
+                        a(href=routes.logout) Log Out
