--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,4 +1,21 @@
 extends layouts/main
 
 block content
-    p userDetail
+    .user-profile
+        .user-profile__header
+            img.u-avatar(src=user.avatarUrl)
+            h4.profile__username=user.name
+        if user.id
+            .user-profile__btns
+                a(href=`/users${routes.editProfile}`)
+                    button Edit Profile
+                a(href=`/users${routes.changePassword}`)
+                    button Change Password 
+        .home-videos
+            each item in user.videos 
+                +videoBlock({
+                    id:item.id,
+                    title:item.title,
+                    views:item.views,
+                    videoFile:item.fileUrl
+                })
