--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,11 +1,14 @@
 extends layouts/main
+include mixins/videoPlayer
 
 block content
     .video-detail__container
-        .video__player
-            video(src=`/${video.fileUrl}`)
+        +videoPlayer({
+            src:video.fileUrl
+        })
+            //- video.creator.id===
         .video__info
-            if video.creator.id === user.id
+            if user.id 
                a(href=routes.editVideo(video.id))
                     button Edit video
             h5.video__title=video.title
@@ -16,7 +19,7 @@ block content
                 span.video__views #{video.views} views
             .video__author
                 |Uploaded by 
-                a(href=routes.userDetail(video.creator.id))=video.creator.name
+                //- a(href=routes.userDetail(video.creator.id))=video.creator.name
         .video__comments
             if video.comments.length === 1
                 span.video__comment-number 1 comment
